--- a/macOSVirtualMachineSampleApp.xcodeproj/xcshareddata/xcschemes/InstallationTool-Swift.xcscheme
+++ b/macOSVirtualMachineSampleApp.xcodeproj/xcshareddata/xcschemes/InstallationTool-Swift.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1320"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -36,6 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
+      customWorkingDirectory = "/Users/paulshmiedmayer/Downloads/RunningMacOSInAVirtualMachineOnAppleSiliconMacs"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
