--- a/macOSVirtualMachineSampleApp.xcodeproj/xcshareddata/xcschemes/macOSVirtualMachineSampleApp-Swift~.xcscheme
+++ b/macOSVirtualMachineSampleApp.xcodeproj/xcshareddata/xcschemes/macOSVirtualMachineSampleApp-Swift~.xcscheme
@@ -36,6 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
+      customWorkingDirectory = "/Users/paulshmiedmayer/Downloads/RunningMacOSInAVirtualMachineOnAppleSiliconMacs"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
