Fully automate the setup of the GitHub Action Runner

--- a/Installation/.env
+++ b/Installation/.env
@@ -10,5 +10,5 @@ XCODES_PASSWORD=""
 GITHUB_ACTION_SCOPE=""
 ## Name of the GitHub Runner
 GITHUB_ACTION_NAME=""
-## Personal Access topen with permissions to modify the runner configuration
+## Fine-grained Personal Access Token (PAT) with Read and Write access to organization self hosted runners
 GITHUB_ACTION_RUNNER_PAT=""
